--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.pyc
 .vscode
+.idea
 output
 build
 diff_rasterization/diff_rast.egg-info
@@ -8,4 +9,5 @@ tensorboard_3d
 screenshots
 data/
 data
-submodules/
+#submodules/
+outputs
